website/websites/u64/code/meteor.1.scala.log

Sat, 26 Jan 2013 04:12:27 GMT

MAKE:
mv meteor.scala meteor.scala
mv: `meteor.scala' and `meteor.scala' are the same file
make: [meteor.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.10.0/bin/scalac -optimise -target:jvm-1.7 meteor.scala
meteor.scala:296: error: value first is not a member of Array[String]
          args.first.toInt
               ^
one error found
make: [meteor.scala_run] Error 1 (ignored)
5.36s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.7.0_11/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.10.0/lib/scala-library.jar:/usr/local/src/scala-2.10.0/lib/akka-actors.jar:/usr/local/src/scala-2.10.0/lib/typesafe-config.jar meteor 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class meteor
